<resources>
    <string name="interstitial_full_screen">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_ad">ca-app-pub-3940256099942544/6300978111</string>
    <string name="native_ad">ca-app-pub-3940256099942544/2247696110</string>
    <string name="native_ad_unit_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="app_name">Vocab Tricks Reels</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hello Learners</string>
    <string name="slide_1_desc">Find Best Vocabs For All Government Exams</string>
    <string name="slide_2_title">Many Categories</string>
    <string name="slide_2_desc">Synonyms: Words that have similar meanings.</string>
    <string name="slide_3_desc_cat">Antonyms: Words that have opposite meanings.</string>
    <string name="slide_4_title">Share Vocab</string>
    <string name="slide_4_desc">Share your favourite Vocabs with friends, family etc.</string>
    <string name="slide_3_title">Bookmark Vocab</string>
    <string name="slide_3_desc">Among these vocabs you can bookmark your favourite vocab</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="trending">Trending Vocab</string>
    <string name="latest">Latest Vocab</string>
    <string name="profile">My Profile</string>
    <string name="bookmark">Bookmark</string>
    <string name="dummyText">Stop using Google.com to search information for school essays. Use scholar.google.com instead. You will find information right away!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="moreapp">More\nApps</string>
    <string name="tts_label">\uD83D\uDD0A</string>
    <string name="ai_label">AI\nExplain</string>
    <string name="quiz_title">Daily Quiz</string>
    <string name="streak_label">Streak</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string-array name="mydata">
        <item>adsfsafa</item>
        <item>sdnsakmdsankj</item>
        <item>sadkjsadhsadkj</item>
        <item>askdjsakdlas</item>
    </string-array>
    <string-array name="mycat">
        <item>Vocab Chapter 1</item>
        <item>Vocab Chapter 2</item>
        <item>Vocab Chapter 3</item>
        <item>Vocab Chapter 4</item>
        <item>Vocab Chapter 5</item>
        <item>Vocab Chapter 6</item>
        <item>Vocab Chapter 7</item>
        <item>Vocab Chapter 8</item>
        <item>Vocab Chapter 9</item>
        <item>Vocab Chapter 10</item>
        
    </string-array>
    <string-array name="mydb">
        <item>life_quotes</item>
        <item>inspirational_quote</item>
        <item>happiness_quotes</item>
        <item>beautiful_quotes</item>
        <item>change_quote</item>
        <item>introvert_quotes</item>
        <item>hope_quotes</item>
        <item>travel_quotes</item>
        <item>trust_quotes</item>
        <item>martin_luther_quotes</item>
        <item>freedom_quotes</item>
        
    </string-array>
    <string-array name="myidiomcat">
        <item>idiom 1</item>
        <item>idiom 2</item>
        <item>idiom 3</item>
        <item>idiom 4</item>
        <item>idiom 5</item>
        <item>idiom 6</item>
        <item>idiom 7</item>
        <item>idiom 8</item>
        <item>idiom 9</item>
        <item>idiom 10</item>
        <item>idiom 11</item>
        <item>idiom 12</item>
               <item>idiom 13</item>
          <item>idiom 14</item>
          <item>idiom 15</item>
          <item>idiom 16</item>
               <item>idiom 17</item>
               <item>idiom 18</item>
               <item>idiom 19</item>
               <item>idiom 20</item>
               <item>idiom 21</item>
        
    </string-array>
    <string-array name="myidiomdb">
        <item>life_quotes_idiom</item>
        <item>inspirational_quote_idiom</item>
        <item>happiness_quotes_idiom</item>
        <item>beautiful_quotes_idiom</item>
        <item>change_quote_idiom</item>
        <item>introvert_quotes_idiom</item>
        <item>hope_quotes_idiom</item>
        <item>travel_quotes_idiom</item>
        <item>trust_quotes_idiom</item>
        <item>martin_luther_quotes_idiom</item>
        <item>freedom_quotes_idiom</item>
        <item>humanity_quotes_idiom</item>
             <item>simplicity_quotes_idiom</item>
           <item>music_quotes_idiom</item>
           <item>attitude_quotes_idiom</item>
            <item>zen_quotes_idiom</item>
              <item>smile_quotes_idiom</item>
              <item>art_quotes_idiom</item>
              <item>silence_quotes_idiom</item>
              <item>gm_quotes_idiom</item>
              <item>rumi_quotes_idiom</item>
        
    </string-array>
</resources>