<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:minHeight="500dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_vocab"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:visibility="gone"
        card_view:cardCornerRadius="7dp"
        card_view:cardElevation="7dp"
        card_view:contentPadding="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardBackground"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/ll_quote"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.85"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_vocab"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="14dp"
                    android:layout_weight="0.84"
                    android:gravity="center_horizontal"
                    android:padding="1dp"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_vocab"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.84"
                    android:gravity="center_horizontal"
                    android:padding="1dp"
                    android:text="Stop using Google.com to search information for school essays. Use scholar.google.com instead. You will find information right away!"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.120"
                android:background="@color/cardBackground"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:id="@+id/copyLLVocab"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.20"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:contentDescription="Copy"
                        android:src="@drawable/copy" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/starLLVocab"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.20"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/star"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:contentDescription="Bookmark"
                        android:src="@drawable/star" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/shareLLVocab"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.20"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:contentDescription="Share"
                        android:src="@drawable/newshareee" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ttsLLVocab"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.20"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/tts_label"
                        android:textColor="#c7c7c7"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/explainLLVocab"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.20"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/ai_label"
                        android:textColor="#4acfda"
                        android:textSize="11sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_idiom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        card_view:cardCornerRadius="7dp"
        card_view:cardElevation="7dp"
        card_view:contentPadding="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardBackground"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/ll_idiom"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.85"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_idiom"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="14dp"
                    android:layout_weight="0.84"
                    android:gravity="center_horizontal"
                    android:padding="1dp"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_idiom"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.84"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="Stop using Google.com to search information for school essays. Use scholar.google.com instead. You will find information right away!"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.120"
                android:background="@color/cardBackground"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:id="@+id/copyLLIdiom"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.20"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:contentDescription="Copy"
                        android:src="@drawable/copy" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/starLLIdiom"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.20"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/star_idiom"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:contentDescription="Bookmark"
                        android:src="@drawable/star" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/shareLLIdiom"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.20"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:contentDescription="Share"
                        android:src="@drawable/newshareee" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ttsLLIdiom"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.20"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/tts_label"
                        android:textColor="#c7c7c7"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/explainLLIdiom"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.20"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/ai_label"
                        android:textColor="#4acfda"
                        android:textSize="11sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Banner Ad at the bottom -->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad" />

</LinearLayout>